reports/0041_epi_cert_mutation_full.out/mutants.out/log/crates__tracewake-core__src__actions__defs__eat.rs_line_224_col_5_001.log

*** crates/tracewake-core/src/actions/defs/eat.rs:224:5: replace access_failure -> Option<EatAccessFailure> with Some(Default::default())

*** mutation diff:
--- crates/tracewake-core/src/actions/defs/eat.rs
+++ replace access_failure -> Option<EatAccessFailure> with Some(Default::default())
@@ -216,53 +216,17 @@
 }
 
 fn access_failure(
     state: &PhysicalState,
     food: &FoodSupplyState,
     actor_id: &crate::ids::ActorId,
     actor_place_id: &crate::ids::PlaceId,
 ) -> Option<EatAccessFailure> {
-    match &food.location {
-        Location::AtPlace(place_id) if place_id == actor_place_id => None,
-        Location::AtPlace(_) => Some(EatAccessFailure {
-            actor_visible_reason: "food source not reachable",
-            absence_ancestry: "food source not at actor place",
-        }),
-        Location::CarriedBy(carrier_id) if carrier_id == actor_id => None,
-        Location::CarriedBy(carrier_id) => Some(EatAccessFailure {
-            actor_visible_reason: "food source not reachable",
-            absence_ancestry: if state.actors.contains_key(carrier_id) {
-                "food source carried by another actor"
-            } else {
-                "food source carrier absent"
-            },
-        }),
-        Location::InContainer(container_id) => {
-            let Some(container) = state.containers.get(container_id) else {
-                return Some(EatAccessFailure {
-                    actor_visible_reason: "food source not reachable",
-                    absence_ancestry: "food source container absent",
-                });
-            };
-            if container.location != Location::AtPlace(actor_place_id.clone()) {
-                return Some(EatAccessFailure {
-                    actor_visible_reason: "food source not reachable",
-                    absence_ancestry: "food source container not reachable",
-                });
-            }
-            if !container.is_open {
-                return Some(EatAccessFailure {
-                    actor_visible_reason: "food source not reachable",
-                    absence_ancestry: "food source container closed",
-                });
-            }
-            None
-        }
-    }
+    Some(Default::default()) /* ~ changed by cargo-mutants ~ */
 }
 
 fn food_supply_target(proposal: &Proposal) -> Result<FoodSupplyId, ActionRejection> {
     let target = proposal.target_ids.first().ok_or_else(|| {
         reject(
             PipelineStage::TargetBinding,
             ReasonCode::TargetNotFound,
             "target_count",


*** /home/joeloverbeck/.rustup/toolchains/1.93.0-x86_64-unknown-linux-gnu/bin/cargo test --no-run --verbose --workspace --locked
       Dirty tracewake-core v0.1.0 (/tmp/cargo-mutants-tracewake-KPbovd.tmp/crates/tracewake-core): the file `crates/tracewake-core/src/actions/defs/eat.rs` has changed (1781911469.119923896s, 3s after last build at 1781911466.055923983s)
   Compiling tracewake-core v0.1.0 (/tmp/cargo-mutants-tracewake-KPbovd.tmp/crates/tracewake-core)
     Running `/home/joeloverbeck/.rustup/toolchains/1.93.0-x86_64-unknown-linux-gnu/bin/rustc --crate-name tracewake_core --edition=2021 crates/tracewake-core/src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --emit=dep-info,link -C embed-bitcode=no -C debuginfo=2 --test --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=2fc44e5b19aef358 -C extra-filename=-b96b951b3689326d --out-dir /tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps -C incremental=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/incremental -L dependency=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps`
     Running `/home/joeloverbeck/.rustup/toolchains/1.93.0-x86_64-unknown-linux-gnu/bin/rustc --crate-name tracewake_core --edition=2021 crates/tracewake-core/src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --crate-type lib --emit=dep-info,metadata,link -C embed-bitcode=no -C debuginfo=2 --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=e33c3a3bd335069b -C extra-filename=-95b4b25dfac705df --out-dir /tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps -C incremental=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/incremental -L dependency=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps`
error[E0277]: the trait bound `EatAccessFailure: Default` is not satisfied
   --> crates/tracewake-core/src/actions/defs/eat.rs:224:10
    |
224 |     Some(Default::default()) /* ~ changed by cargo-mutants ~ */
    |          ^^^^^^^^^^^^^^^^^^ the trait `Default` is not implemented for `EatAccessFailure`
    |
help: consider annotating `EatAccessFailure` with `#[derive(Default)]`
    |
213 + #[derive(Default)]
214 | struct EatAccessFailure {
    |

For more information about this error, try `rustc --explain E0277`.
error: could not compile `tracewake-core` (lib) due to 1 previous error

Caused by:
  process didn't exit successfully: `/home/joeloverbeck/.rustup/toolchains/1.93.0-x86_64-unknown-linux-gnu/bin/rustc --crate-name tracewake_core --edition=2021 crates/tracewake-core/src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --crate-type lib --emit=dep-info,metadata,link -C embed-bitcode=no -C debuginfo=2 --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=e33c3a3bd335069b -C extra-filename=-95b4b25dfac705df --out-dir /tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps -C incremental=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/incremental -L dependency=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps` (exit status: 1)
warning: build failed, waiting for other jobs to finish...
error: could not compile `tracewake-core` (lib test) due to 1 previous error

Caused by:
  process didn't exit successfully: `/home/joeloverbeck/.rustup/toolchains/1.93.0-x86_64-unknown-linux-gnu/bin/rustc --crate-name tracewake_core --edition=2021 crates/tracewake-core/src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --emit=dep-info,link -C embed-bitcode=no -C debuginfo=2 --test --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=2fc44e5b19aef358 -C extra-filename=-b96b951b3689326d --out-dir /tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps -C incremental=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/incremental -L dependency=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps` (exit status: 1)

*** result: Failure(101)
